--- a/config/samples/multiple-sample-2.yaml
+++ b/config/samples/multiple-sample-2.yaml
@@ -1,11 +1,14 @@
 apiVersion: charts.example.com/v1alpha1
 kind: ActionsRunnerController
 metadata:
-  name: actionsrunnercontroller-sample-1
+  name: actionsrunnercontroller-sample-2
+  namespace: arc-controllers
 spec:
+  leaderElectionId: 2
   authSecret:
+    name: arc-secret-2
     create: true
     github_token: 
   scope:
     singleNamespace: true
-    watchNamespace: test1
+    watchNamespace: test2
