only trigger builds when tagged

--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -2,12 +2,8 @@ name: Build and Push Images
 
 on:
   push:
-    branches:
-      - main
-    paths-ignore: 
-      - README.md
-      - .gitignore
-      - .github/**
+    tags: 
+      - '*'
   workflow_dispatch:
     
 jobs:
