--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -3,7 +3,11 @@ name: Build and Push Images
 on:
   push:
     tags: 
-      - '*'
+      - '**' 
+    paths-ignore: 
+      - README.md
+      - .gitignore
+      - .github/**
   workflow_dispatch:
     
 jobs:
@@ -11,6 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:    
     - uses: actions/checkout@v3
+    - name: Set Version
+      run: |
+        TAG=${GITHUB_REF#refs/*/}
+        [[ ! -v TAG ]] TAG=experimental
+        echo "TAG=$TAG" >> $GITHUB_ENV 
+        echo "IMG=ghcr.io/${GITHUB_REPOSITORY,,}:$TAG" >> $GITHUB_ENV
+        echo "VERSION=$TAG" >> $GITHUB_ENV
     - name: Install operator-sdk
       run: |
         export ARCH=$(case $(uname -m) in x86_64) echo -n amd64 ;; aarch64) echo -n arm64 ;; *) echo -n $(uname -m) ;; esac)
@@ -21,7 +32,6 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        export IMG=ghcr.io/${GITHUB_REPOSITORY,,}:$(date +%Y%m%d.$GITHUB_RUN_NUMBER)
         make bundle bundle-build docker-build
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
@@ -32,5 +42,9 @@ jobs:
     - name: Publish
       shell: bash
       run: |
-        export IMG=ghcr.io/${GITHUB_REPOSITORY,,}:$(date +%Y%m%d.$GITHUB_RUN_NUMBER)
         make docker-push bundle-push
+    - name: list images
+      shell: bash
+      run: |
+        docker images
+
