--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -17,6 +17,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set Version
       run: |
+        echo "event: ${{ github.event }}"
+        echo "action: ${{ github.event.action }}"
+        echo "ref: ${{  github.ref_name }}"
         TAG=${GITHUB_REF#refs/*/}
         [[ ! -v TAG ]] && TAG=experimental
         echo "TAG=$TAG" >> $GITHUB_ENV 
