--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -17,8 +17,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set Version
       run: |
-        echo "event: ${{ github.event }}"
-        echo "action: ${{ github.event.action }}"
+        echo "action: ${{ github.event_name }}"
         echo "ref: ${{  github.ref_name }}"
         TAG=${GITHUB_REF#refs/*/}
         [[ ! -v TAG ]] && TAG=experimental
