--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -18,6 +18,7 @@ jobs:
     - name: Set Version
       run: |
         TAG=${GITHUB_REF#refs/*/}
+        echo "reftype: $GITHUB_REF_TYPE"
         if [[ $GITHUB_REF_TYPE != "tag" ]]; then
           VERSION=$(git tag -l -n1 --format="%(refname:strip=2)")
           VERSION=$(awk -F. '/[0-9]+\./{$NF++;print}' OFS=. <<< "$TAG")
