--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -21,7 +21,7 @@ jobs:
         echo "reftype: $GITHUB_REF_TYPE"
         if [[ $GITHUB_REF_TYPE != "tag" ]]; then
           VERSION=$(git tag -l -n1 --format="%(refname:strip=2)")
-          VERSION=$(awk -F. '/[0-9]+\./{$NF++;print}' OFS=. <<< "$TAG")
+          VERSION=$(awk -F. '/[0-9]+\./{$NF++;print}' OFS=. <<< "$VERSION")
           TAG=experimental
           echo $VERSION
           echo "VERSION=$VERSION" >> $GITHUB_ENV
