--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -22,6 +22,7 @@ jobs:
         ls -la
         echo "tag:"
         git tag -l -n1 --format="%(refname:strip=2)"
+        git tag -l
         echo "reftype: $GITHUB_REF_TYPE"
         if [[ $GITHUB_REF_TYPE != "tag" ]]; then
           VERSION=$(git tag -l -n1 --format="%(refname:strip=2)")
