--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -46,20 +46,19 @@ jobs:
         export OPERATOR_SDK_DL_URL=https://github.com/operator-framework/operator-sdk/releases/download/v1.26.0
         curl -LO ${OPERATOR_SDK_DL_URL}/operator-sdk_${OS}_${ARCH}
         chmod +x operator-sdk_${OS}_${ARCH} && sudo mv operator-sdk_${OS}_${ARCH} /usr/local/bin/operator-sdk
-    - name: Build
-      shell: bash
-      run: |
-        make bundle bundle-build docker-build catalog-build
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Publish
+
+    - name: Build and Push Images
       shell: bash
       run: |
-        make docker-push bundle-push catalog-push
+        make docker-build docker-push
+        make bundle bundle-build bundle-push catalog-build catalog-push
     - name: list images
       shell: bash
       run: |
