--- a/helm-charts/actions-runner-controller/templates/manager_role.yaml
+++ b/helm-charts/actions-runner-controller/templates/manager_role.yaml
@@ -7,7 +7,7 @@ rules:
 - verbs:
   - "*"
   apigroups:
-  - ""
+  - "apiextensions.k8s.io"
   resources:
   - customresourcedefinitions
 - apiGroups:
