--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -3,6 +3,13 @@ kind: ClusterRole
 metadata:
   name: manager-role
 rules:
+- verbs:
+  - "*"
+  apigroups:
+  - "apiextensions.k8s.io"
+  resources:
+  - customresourcedefinitions
+
 ##
 ## Base operator rules
 ##
