--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,14 +5,14 @@ metadata:
 rules:
 - verbs:
   - "*"
-  apigroups:
+  apiGroups:
   - "apiextensions.k8s.io"
   resources:
   - customresourcedefinitions
 
 - verbs:
   - "*"
-  apigroups:
+  apiGroups:
   - cert-manager.io
   resources:
   - certificates
