manager-role chart perms capitalization

--- a/helm-charts/actions-runner-controller/templates/manager_role.yaml
+++ b/helm-charts/actions-runner-controller/templates/manager_role.yaml
@@ -6,7 +6,7 @@ metadata:
 rules:
 - verbs:
   - "*"
-  apigroups:
+  apiGroups:
   - "apiextensions.k8s.io"
   resources:
   - customresourcedefinitions
