--- a/helm-charts/actions-runner-controller/templates/manager_role.yaml
+++ b/helm-charts/actions-runner-controller/templates/manager_role.yaml
@@ -4,12 +4,18 @@ metadata:
   creationTimestamp: null
   name: {{ include "actions-runner-controller.managerRoleName" . }}
 rules:
-- verbs:
-  - "*"
-  apiGroups:
+- apiGroups:
   - "apiextensions.k8s.io"
   resources:
   - customresourcedefinitions
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - actions.summerwind.dev
   resources:
