--- a/helm-charts/actions-runner-controller/templates/manager_role.yaml
+++ b/helm-charts/actions-runner-controller/templates/manager_role.yaml
@@ -7,6 +7,18 @@ rules:
 - apiGroups:
   - actions.summerwind.dev
   resources:
+  - horizontalrunnerautoscalers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - actions.summerwind.dev
+  resources:
   - horizontalrunnerautoscalers/finalizers
   verbs:
   - create
