[create-pull-request] automated change

--- a/src/config/default/kustomization.yaml
+++ b/src/config/default/kustomization.yaml
@@ -1,12 +1,12 @@
 # Adds namespace to all resources.
-namespace: simple-arc-operator-system
+namespace: src-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: simple-arc-operator-
+namePrefix: src-
 
 # Labels to add to all resources and selectors.
 #labels:
@@ -27,6 +27,4 @@ patchesStrategicMerge:
 # endpoint w/o any authn/z, please comment the following line.
 - manager_auth_proxy_patch.yaml
 
-# Mount the controller config file for loading manager configurations
-# through a ComponentConfig type
-#- manager_config_patch.yaml
+
