--- a/src/config/rbac/actionsrunnercontroller_viewer_role.yaml
+++ b/src/config/rbac/actionsrunnercontroller_viewer_role.yaml
@@ -2,6 +2,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  labels:
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/instance: actionsrunnercontroller-viewer-role
+    app.kubernetes.io/component: rbac
+    app.kubernetes.io/created-by: src
+    app.kubernetes.io/part-of: src
+    app.kubernetes.io/managed-by: kustomize
   name: actionsrunnercontroller-viewer-role
 rules:
 - apiGroups:
