--- a/.github/workflows/generate-operator.yaml
+++ b/.github/workflows/generate-operator.yaml
@@ -29,7 +29,7 @@ jobs:
         cd simple-arc-operator
         operator-sdk init \
           --plugins helm \
-          --domain ghcr.io/boxboat-github-practice \
+          --domain "ghcr.io/boxboat-github-practice" \
           --helm-chart actions-runner-controller \
           --helm-chart-repo https://actions-runner-controller.github.io/actions-runner-controller
 
