[create-pull-request] automated change

--- a/simple-arc-operator/config/rbac/actionsrunnercontroller_editor_role.yaml
+++ b/simple-arc-operator/config/rbac/actionsrunnercontroller_editor_role.yaml
@@ -2,10 +2,17 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  labels:
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/instance: actionsrunnercontroller-editor-role
+    app.kubernetes.io/component: rbac
+    app.kubernetes.io/created-by: simple-arc-operator
+    app.kubernetes.io/part-of: simple-arc-operator
+    app.kubernetes.io/managed-by: kustomize
   name: actionsrunnercontroller-editor-role
 rules:
 - apiGroups:
-  - charts.example.com
+  - boxboat-github-practice.ghcr.io
   resources:
   - actionsrunnercontrollers
   verbs:
@@ -17,7 +24,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - charts.example.com
+  - boxboat-github-practice.ghcr.io
   resources:
   - actionsrunnercontrollers/status
   verbs:
