--- a/simple-arc-operator/config/crd/bases/boxboat-github-practice.my.domain_actionsrunnercontrollers.yaml
+++ b/simple-arc-operator/config/crd/bases/boxboat-github-practice.my.domain_actionsrunnercontrollers.yaml
@@ -2,9 +2,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: actionsrunnercontrollers.charts.example.com
+  name: actionsrunnercontrollers.boxboat-github-practice.my.domain
 spec:
-  group: charts.example.com
+  group: boxboat-github-practice.my.domain
   names:
     kind: ActionsRunnerController
     listKind: ActionsRunnerControllerList
