--- a/simple-arc-operator/config/crd/kustomization.yaml
+++ b/simple-arc-operator/config/crd/kustomization.yaml
@@ -2,5 +2,5 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/charts.example.com_actionsrunnercontrollers.yaml
+- bases/boxboat-github-practice.my.domain_actionsrunnercontrollers.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
