--- a/simple-arc-operator/config/rbac/actionsrunnercontroller_viewer_role.yaml
+++ b/simple-arc-operator/config/rbac/actionsrunnercontroller_viewer_role.yaml
@@ -2,10 +2,17 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  labels:
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/instance: actionsrunnercontroller-viewer-role
+    app.kubernetes.io/component: rbac
+    app.kubernetes.io/created-by: simple-arc-operator
+    app.kubernetes.io/part-of: simple-arc-operator
+    app.kubernetes.io/managed-by: kustomize
   name: actionsrunnercontroller-viewer-role
 rules:
 - apiGroups:
-  - charts.example.com
+  - boxboat-github-practice.my.domain
   resources:
   - actionsrunnercontrollers
   verbs:
@@ -13,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - charts.example.com
+  - boxboat-github-practice.my.domain
   resources:
   - actionsrunnercontrollers/status
   verbs:
