--- a/simple-arc-operator/config/rbac/role.yaml
+++ b/simple-arc-operator/config/rbac/role.yaml
@@ -1,83 +1,79 @@
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: manager-role
-rules:
-##
-## Base operator rules
-##
-# We need to get namespaces so the operator can read namespaces to ensure they exist
 - apiGroups:
-  - ""
+    - ''
   resources:
-  - namespaces
+    - namespaces
   verbs:
-  - get
-# We need to manage Helm release secrets
+    - get
 - apiGroups:
-  - ""
+    - ''
   resources:
-  - secrets
+    - secrets
   verbs:
-  - "*"
-# We need to create events on CRs about things happening during reconciliation
+    - '*'
 - apiGroups:
-  - ""
+    - ''
   resources:
-  - events
+    - events
   verbs:
-  - create
-
-##
-## Rules for github-practice.boxboat.com/v1alpha1, Kind: ActionsRunnerController
-##
+    - create
 - apiGroups:
-  - github-practice.boxboat.com
+    - github-practice.boxboat.com
   resources:
-  - actionsrunnercontrollers
-  - actionsrunnercontrollers/status
-  - actionsrunnercontrollers/finalizers
+    - actionsrunnercontrollers
+    - actionsrunnercontrollers/status
+    - actionsrunnercontrollers/finalizers
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
 - apiGroups:
-  - ""
+    - ''
   resources:
-  - pods
-  - services
-  - services/finalizers
-  - endpoints
-  - persistentvolumeclaims
-  - events
-  - configmaps
-  - secrets
+    - pods
+    - services
+    - services/finalizers
+    - endpoints
+    - persistentvolumeclaims
+    - events
+    - configmaps
+    - secrets
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
 - apiGroups:
-  - apps
+    - apps
   resources:
-  - deployments
-  - daemonsets
-  - replicasets
-  - statefulsets
+    - deployments
+    - daemonsets
+    - replicasets
+    - statefulsets
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-
-#+kubebuilder:scaffold:rules
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
+- apiGroups:
+    - apiextensions.k8s.io
+  resources:
+    - customresourcedefinitions
+  verbs:
+    - '*'
+- apiGroups:
+    - cert-manager.io
+  resources:
+    - certificates
+    - issuers
+  verbs:
+    - '*'
