[create-pull-request] automated change

--- a/simple-arc-operator/config/rbac/role.yaml
+++ b/simple-arc-operator/config/rbac/role.yaml
@@ -1,21 +1,30 @@
+##
+## Base operator rules
+##
+# We need to get namespaces so the operator can read namespaces to ensure they exist
 - apiGroups:
-    - ''
+    - ""
   resources:
     - namespaces
   verbs:
     - get
+# We need to manage Helm release secrets
 - apiGroups:
-    - ''
+    - ""
   resources:
     - secrets
   verbs:
-    - '*'
+    - "*"
+# We need to create events on CRs about things happening during reconciliation
 - apiGroups:
-    - ''
+    - ""
   resources:
     - events
   verbs:
     - create
+##
+## Rules for github-practice.boxboat.com/v1alpha1, Kind: ActionsRunnerController
+##
 - apiGroups:
     - github-practice.boxboat.com
   resources:
@@ -31,7 +40,7 @@
     - update
     - watch
 - apiGroups:
-    - ''
+    - ""
   resources:
     - pods
     - services
