fix append for role permissions

--- a/.github/workflows/generate-operator.yaml
+++ b/.github/workflows/generate-operator.yaml
@@ -41,7 +41,7 @@ jobs:
         yq -i eval '.spec.template.spec.containers[0].resources.limits.memory = "500Mi"' \
           simple-arc-operator/config/manager/manager.yaml
 
-        yq -i eval '.rules + [
+        yq -i eval '.rules += [
           { 
             "apiGroups": ["apiextensions.k8s.io"], 
             "resources": ["customresourcedefinitions"],
