--- a/simple-arc-operator/config/rbac/role.yaml
+++ b/simple-arc-operator/config/rbac/role.yaml
@@ -1,88 +1,83 @@
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: manager-role
+rules:
 ##
 ## Base operator rules
 ##
 # We need to get namespaces so the operator can read namespaces to ensure they exist
 - apiGroups:
-    - ""
+  - ""
   resources:
-    - namespaces
+  - namespaces
   verbs:
-    - get
+  - get
 # We need to manage Helm release secrets
 - apiGroups:
-    - ""
+  - ""
   resources:
-    - secrets
+  - secrets
   verbs:
-    - "*"
+  - "*"
 # We need to create events on CRs about things happening during reconciliation
 - apiGroups:
-    - ""
+  - ""
   resources:
-    - events
+  - events
   verbs:
-    - create
+  - create
+
 ##
-## Rules for github-practice.boxboat.com/v1alpha1, Kind: ActionsRunnerController
+## Rules for charts.example.com/v1alpha1, Kind: ActionsRunnerController
 ##
 - apiGroups:
-    - github-practice.boxboat.com
+  - charts.example.com
   resources:
-    - actionsrunnercontrollers
-    - actionsrunnercontrollers/status
-    - actionsrunnercontrollers/finalizers
+  - actionsrunnercontrollers
+  - actionsrunnercontrollers/status
+  - actionsrunnercontrollers/finalizers
   verbs:
-    - create
-    - delete
-    - get
-    - list
-    - patch
-    - update
-    - watch
-- apiGroups:
-    - ""
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- verbs:
+  - "*"
+  apiGroups:
+  - "rbac.authorization.k8s.io"
   resources:
-    - pods
-    - services
-    - services/finalizers
-    - endpoints
-    - persistentvolumeclaims
-    - events
-    - configmaps
-    - secrets
-  verbs:
-    - create
-    - delete
-    - get
-    - list
-    - patch
-    - update
-    - watch
-- apiGroups:
-    - apps
+  - "clusterrolebindings"
+  - "clusterroles"
+- verbs:
+  - "*"
+  apiGroups:
+  - "admissionregistration.k8s.io"
   resources:
-    - deployments
-    - daemonsets
-    - replicasets
-    - statefulsets
-  verbs:
-    - create
-    - delete
-    - get
-    - list
-    - patch
-    - update
-    - watch
-- apiGroups:
-    - apiextensions.k8s.io
+  - "mutatingwebhookconfigurations"
+  - "validatingwebhookconfigurations"
+- verbs:
+  - "*"
+  apiGroups:
+  - ""
   resources:
-    - customresourcedefinitions
-  verbs:
-    - '*'
-- apiGroups:
-    - cert-manager.io
+  - "serviceaccounts"
+  - "services"
+- verbs:
+  - "*"
+  apiGroups:
+  - "rbac.authorization.k8s.io"
   resources:
-    - certificates
-    - issuers
-  verbs:
-    - '*'
+  - "rolebindings"
+  - "roles"
+- verbs:
+  - "*"
+  apiGroups:
+  - "apps"
+  resources:
+  - "deployments"
+
+#+kubebuilder:scaffold:rules
