add service account permissions to manager role

--- a/.github/workflows/generate-operator.yaml
+++ b/.github/workflows/generate-operator.yaml
@@ -48,7 +48,10 @@ jobs:
             "apiGroups": ["cert-manager.io"],
             "resources": ["certificates", "issuers"],
             "verbs": ["*"]
-          }
+          },
+            "apiGroups": [""],
+            "resources": ["serviceaccounts"],
+            "verbs": ["*"]
         ]' \
           simple-arc-operator/config/rbac/role.yaml
 
