[create-pull-request] automated change

--- a/simple-arc-operator/config/rbac/role.yaml
+++ b/simple-arc-operator/config/rbac/role.yaml
@@ -91,4 +91,10 @@ rules:
       - issuers
     verbs:
       - '*'
+  - apiGroups:
+      - ""
+    resources:
+      - serviceaccounts
+    verbs:
+      - '*'
 #+kubebuilder:scaffold:rules
