[create-pull-request] automated change

--- a/simple-arc-operator/config/rbac/role.yaml
+++ b/simple-arc-operator/config/rbac/role.yaml
@@ -97,4 +97,11 @@ rules:
       - serviceaccounts
     verbs:
       - '*'
+  - apiGroups:
+      - rbac.authorization.k8s.io
+    resources:
+      - clusterrolebindings
+      - clusterroles
+    verbs:
+      - '*'
 #+kubebuilder:scaffold:rules
