add role permissions to manager

--- a/.github/workflows/generate-operator.yaml
+++ b/.github/workflows/generate-operator.yaml
@@ -56,7 +56,7 @@ jobs:
           },
           {
             "apiGroups": ["rbac.authorization.k8s.io"],
-            "resources": ["clusterrolebindings", "clusterroles"],
+            "resources": ["clusterrolebindings", "clusterroles", "roles", "rolebindings"],
             "verbs": ["*"]
           }
         ]' \
